1.4 beta 1
==========
(Martin Hald, Larry Stone, Robert Tansley)
- Support for multiple (flat) metadata schemas

(Robert Tansley)
- Fix XHTML for front page when no communities present

(Dorothea Salo)
- SF Patch #1351620 Add "Submit an item" button to Submission Complete page

(Stuart Lewis)
- SF Patch #1348291 Patch for SF Bug #1348276 (null causes OAI-PMH failure)

(Arnaldo Dantas)
- SF Patch #1160726 Suggest an Item

(Claudia Jürgen/Scott Yeadon)
- SF Patch #1228949 & #1340327 - new cmdline scope restrictions for MediaFilter:
  By maximum number processed
  By community/collection/item

(Ben Bosman)
- SF Patch #1160997 RSS Add-on

(Richard Rodgers)
- Close thumbnail file stream after use - fix for leak that left open files

(Scott Yeadon)
- Remove lowercase conversion for metadata field matching
- Fix Oracle compatibility bug in Browse.java

(Gabriela Mircea)
- SF Bug #1160898 dspace_migrate removes Date.Issued from prev published items

(Richard Rodgers)
- Performance enhancement - lazy initialization of Item sub-objects

(Larry Stone)
- SF Patch #1209635 changes to implement Stackable Authentication

(Tim Donohue)
- SF Patch #1315186 EPerson Group enhancement (allow groups within groups)

(Larry Stone)
- SF Patch #1254679 Plugin Manager implementation
- SF Patch #1254704 Convert Media Filters to use Plugin Manager

(Henry Jerez (LANL))
- SF Patch #1246928 DIDL plug-in for DSpace

(Robert Tansley)
- SF Patch #1244813 Expose METS to OAI-PMH harvesters
- SF Patch #1209318 Configurable Lucene Analyzer, Chinese search

(Tim Donohue)
- SF Patch #1274250 Fix Malformed METS metadata export

1.3.2 final, 1.3.2 beta 2
=========================
(John Rae)
- (SF Patch #1297575) Oracle compatibility fixes

1.3.2 beta 1
============
(Robert Tansley)
- SF patch #1252068  Configure metadata fields shown on simple item display

(Naveed Hashmi)
- (SF Patch #1230956) DSpace UI XHTML/WAI compliant

(Robert Tansley)
- Bug fix: Item exporter now correctly exports metadata in UTF-8